crates/ddlog-syntax/tests/validation/fail/too_many_column_commas.dl
// kind:item validate:true pass:false ignore:false
relation foo(foo: Bar,, bar: Baz)
multiset foo(foo: Bar,, bar: Baz)
stream foo(foo: Bar,, bar: Baz)
